# app.js
@@ -83,7 +83,13 @@ app.post(
   routes.nlp_api.document_metadata
 );
 
+
 app.get("/scrapper/search", routes.blogs.browse);
+app.post(
+  "/scrapper/webpage-content",
+  routes.service.authenticate,
+  routes.blogs.get_webpage_content 
+);
 
 app.get("/version", (req, res) => {
   getVersionString()
