# swagger/index.json
@@ -19,6 +19,7 @@
     "/semantic/search": {
       "get": {
         "summary": "Get Semantic Search Documents",
+        "description": "This endpoint retrieves documents based on semantic search criteria. You can filter the results using various parameters such as page number, page limit, search term, country, document type, language, start date, and end date.",
         "tags": ["Semantic Search"],
         "parameters": [
           {
@@ -118,7 +119,8 @@
     },
     "/semantic/stats": {
       "get": {
-        "summary": "Get Semantic Search Stats",
+        "summary": "Get Semantic Search Statistics",
+        "description": "This endpoint retrieves statistics related to Semantic Search. You can filter the statistics based on various parameters such as page number, page limit, search term, country, document type, language, start date, and end date.",
         "tags": ["Semantic Search"],
         "parameters": [
           {
@@ -219,6 +221,7 @@
     "/semantic/document/meta": {
       "post": {
         "summary": "Get Document Metadata (Language and Locations)",
+        "description": "This endpoint allows you to retrieve metadata such as language and locations from a document using the Semantic Search API. You can select which metadata modules to return as an array.",
         "tags": ["Semantic Search"],
         "parameters": [
           {
@@ -227,14 +230,18 @@
             "required": true,
             "schema": {
               "type": "array",
-              "default": ["location", "language"]
+              "default": ["location", "language"],
+              "items": {
+                "type": "string",
+                "enum": ["location", "language"]
+              }
             },
-            "description": "Select which metadata to return as an array. Available modules are 'language' and 'location'"
+            "description": "Select which metadata to return as an array. Available modules are 'language' and 'location'."
           }
         ],
         "requestBody": {
           "required": true,
-          "description": "Select your preferred method of sending the document: application/json, text/plain or multipart/form-data",
+          "description": "Select your preferred method of sending the document: application/json, text/plain, or multipart/form-data.",
           "content": {
             "multipart/form-data": {
               "schema": {
@@ -300,6 +307,7 @@
     "/scrapper/search": {
       "get": {
         "summary": "Search for Articles from the Scrapper",
+        "description": "This endpoint allows you to search for articles from the Scrapper database. You can filter the results based on various parameters such as page number, search term, country, document type, language, etc.",
         "tags": ["Scrapper"],
         "parameters": [
           {
@@ -372,6 +380,51 @@
             "description": "Successful operation"
           }
         }
+      }
+    },
+    "/scrapper/webpage-content": {
+      "post": {
+        "summary": "Retrieve Content of a Webpage",
+        "description": "This endpoint allows you to retrieve the content of a webpage. Optionally, you can embed the web content into the NLP module by setting `embed_data` to true. To access this endpoint, you need an authorization key provided by the system admin. Additionally, an authentication token must be included in the request, which can be retrieved from the user's profile on the SDG Commons Innovation platform.",
+        "tags": ["Scrapper"],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "url": {
+                    "type": "string",
+                    "description": "The URL of the webpage to process",
+                    "example": "https://example.com/page"
+                  },
+                  "embed_data": {
+                    "type": "boolean",
+                    "description": "Set to true to embed data using the NLP API",
+                    "default": false
+                  },
+                  "auth_key": {
+                    "type": "string",
+                    "description": "Authorization key provided by the system admin",
+                    "example": "your_auth_key"
+                  }
+                },
+                "required": ["url", "auth_key"]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful operation"
+          }
+        },
+        "security": [
+          {
+            "ApiKeyAuth": []
+          }
+        ]
       }
     }
   },
